actualizacion de archivos

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
 
-    <!-- CSS
-	============================================ -->
-    <!-- google fonts -->
     <link
         href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,300i,400,400i,600,600i,700,700i%7CPoppins:300,300i,400,400i,500,500i,600,700,800,900&display=swap"
         rel="stylesheet">
@@ -276,10 +273,11 @@
         </section>
         <!-- hero slider area -->
 
-
-
-
-
+        <!-- SEPARADOR DE RIBBON -->
+        <div id="ribbon">
+            <div id="birthday" class="container w-50 pl-5 pr-5 rounded-lg">
+            </div>
+          </div>
         <!-- Menu Tienda area -->
         <section id="proyectos" class="proyectos-recientes seccion-clara d-flex flex-column">
             <h2 class="contact-title text-center">Tienda de Disfraz</h2>
@@ -434,7 +432,7 @@
 
 
         <!-- Testimonios area -->
-        <section class="testimonial-area bg-gray section-padding" style="margin-top: 50px;">
+        <section class="testimonial-area bg-gray section-padding" >
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -497,7 +495,6 @@
     <div class="scroll-top not-visible">
         <i class="fa fa-angle-up"></i>
     </div>
-    <!-- Scroll to Top End -->
 
 
     <!-- Contacto -->
