--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
         href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,300i,400,400i,600,600i,700,700i%7CPoppins:300,300i,400,400i,500,500i,600,700,800,900&display=swap"
         rel="stylesheet">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Pe-icon-7-stroke CSS -->
-    <link rel="stylesheet" href="/css/vendor/pe-icon-7-stroke.css">
+    <link rel="stylesheet" href="css/vendor/pe-icon-7-stroke.css">
     <!-- Font-awesome CSS -->
-    <link rel="stylesheet" href="/css/vendor/font-awesome.min.css">
+    <link rel="stylesheet" href="css/vendor/font-awesome.min.css">
     <!-- Slick slider css -->
-    <link rel="stylesheet" href="/css/plugins/slick.min.css">
+    <link rel="stylesheet" href="css/plugins/slick.min.css">
     <!-- animate css -->
-    <link rel="stylesheet" href="/css/plugins/animate.css">
+    <link rel="stylesheet" href="css/plugins/animate.css">
     <!-- Nice Select css -->
-    <link rel="stylesheet" href="/css/plugins/nice-select.css">
+    <link rel="stylesheet" href="css/plugins/nice-select.css">
     <!-- jquery UI css -->
-    <link rel="stylesheet" href="/css/plugins/jqueryui.min.css">
+    <link rel="stylesheet" href="css/plugins/jqueryui.min.css">
     <!-- main style css -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
