--- a/caporal.html
+++ b/caporal.html
@@ -7,29 +7,29 @@
     <title>Bordados | Pagador</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
     <!-- CSS
 	============================================ -->
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,300i,400,400i,600,600i,700,700i%7CPoppins:300,300i,400,400i,500,500i,600,700,800,900&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Pe-icon-7-stroke CSS -->
-    <link rel="stylesheet" href="/css/vendor/pe-icon-7-stroke.css">
+    <link rel="stylesheet" href="css/vendor/pe-icon-7-stroke.css">
     <!-- Font-awesome CSS -->
-    <link rel="stylesheet" href="/css/vendor/font-awesome.min.css">
+    <link rel="stylesheet" href="css/vendor/font-awesome.min.css">
     <!-- Slick slider css -->
-    <link rel="stylesheet" href="/css/plugins/slick.min.css">
+    <link rel="stylesheet" href="css/plugins/slick.min.css">
     <!-- animate css -->
-    <link rel="stylesheet" href="/css/plugins/animate.css">
+    <link rel="stylesheet" href="css/plugins/animate.css">
     <!-- Nice Select css -->
-    <link rel="stylesheet" href="/css/plugins/nice-select.css">
+    <link rel="stylesheet" href="css/plugins/nice-select.css">
     <!-- jquery UI css -->
-    <link rel="stylesheet" href="/css/plugins/jqueryui.min.css">
+    <link rel="stylesheet" href="css/plugins/jqueryui.min.css">
     <!-- main style css -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
@@ -47,7 +47,7 @@
                         <div class="col-lg-3">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img class="rounded-circle" src="/img/logo/logo.png" alt="Brand Logo">
+                                    <img class="rounded-circle" src="img/logo/logo.png" alt="Brand Logo">
                                 </a>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                         <div class="mobile-main-header">
                             <div class="mobile-logo">
                                 <a href="index.html">
-                                    <img class="rounded-circle" src="/img/logo/logo.png" alt="Brand Logo">
+                                    <img class="rounded-circle" src="img/logo/logo.png" alt="Brand Logo">
                                 </a>
                             </div>
                             <div class="mobile-menu-toggler">
@@ -276,8 +276,8 @@
                                         <div class="product-item">
                                             <figure class="product-thumb">
                                                 <a href="caporal.html">
-                                                    <img class="pri-img" src="/img/product/caporal001.png" alt="product">
-                                                    <img class="sec-img" src="/img/product/caporal001.png" alt="product">
+                                                    <img class="pri-img" src="img/product/caporal001.png" alt="product">
+                                                    <img class="sec-img" src="img/product/caporal001.png" alt="product">
                                                 </a>
                                                 <div class="button-group">
                                                     <a href="#" data-bs-toggle="tooltip" title="Favorito"><i class="pe-7s-like"></i></a>
@@ -300,8 +300,8 @@
                                         <div class="product-item">
                                             <figure class="product-thumb">
                                                 <a href="caporal.html">
-                                                    <img class="pri-img" src="/img/product/caporal002.png" alt="product">
-                                                    <img class="sec-img" src="/img/product/caporal002.png" alt="product">
+                                                    <img class="pri-img" src="img/product/caporal002.png" alt="product">
+                                                    <img class="sec-img" src="img/product/caporal002.png" alt="product">
                                                 </a>
                                                 <div class="button-group">
                                                     <a href="#" data-bs-toggle="tooltip" title="Favorito"><i class="pe-7s-like"></i></a>
@@ -324,8 +324,8 @@
                                         <div class="product-item">
                                             <figure class="product-thumb">
                                                 <a href="caporal.html">
-                                                    <img class="pri-img" src="/img/product/caporal003.png" alt="product">
-                                                    <img class="sec-img" src="/img/product/caporal003.png" alt="product">
+                                                    <img class="pri-img" src="img/product/caporal003.png" alt="product">
+                                                    <img class="sec-img" src="img/product/caporal003.png" alt="product">
                                                 </a>
                                                 <div class="button-group">
                                                     <a href="#" data-bs-toggle="tooltip" title="Favorito"><i class="pe-7s-like"></i></a>
@@ -348,8 +348,8 @@
                                         <div class="product-item">
                                             <figure class="product-thumb">
                                                 <a href="caporal.html">
-                                                    <img class="pri-img" src="/img/product/caporal004.png" alt="product">
-                                                    <img class="sec-img" src="/img/product/caporal004.png" alt="product">
+                                                    <img class="pri-img" src="img/product/caporal004.png" alt="product">
+                                                    <img class="sec-img" src="img/product/caporal004.png" alt="product">
                                                 </a>
                                                 <div class="button-group">
                                                     <a href="#" data-bs-toggle="tooltip" title="Favorito"><i class="pe-7s-like"></i></a>
@@ -372,8 +372,8 @@
                                         <div class="product-item">
                                             <figure class="product-thumb">
                                                 <a href="caporal.html">
-                                                    <img class="pri-img" src="/img/product/caporal005.png" alt="product">
-                                                    <img class="sec-img" src="/img/product/caporal005.png" alt="product">
+                                                    <img class="pri-img" src="img/product/caporal005.png" alt="product">
+                                                    <img class="sec-img" src="img/product/caporal005.png" alt="product">
                                                 </a>
                                                 <div class="button-group">
                                                     <a href="#" data-bs-toggle="tooltip" title="Favorito"><i class="pe-7s-like"></i></a>
@@ -454,27 +454,27 @@
     <!-- JS============================================ -->
 
     <!-- Modernizer JS -->
-    <script src="/js/vendor/modernizr-3.6.0.min.js"></script>
+    <script src="js/vendor/modernizr-3.6.0.min.js"></script>
     <!-- jQuery JS -->
-    <script src="/js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="js/vendor/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
-    <script src="/js/vendor/bootstrap.bundle.min.js"></script>
+    <script src="js/vendor/bootstrap.bundle.min.js"></script>
     <!-- slick Slider JS -->
-    <script src="/js/plugins/slick.min.js"></script>
+    <script src="js/plugins/slick.min.js"></script>
     <!-- Nice Select JS -->
-    <script src="/js/plugins/nice-select.min.js"></script>
+    <script src="js/plugins/nice-select.min.js"></script>
     <!-- jquery UI JS -->
-    <script src="/js/plugins/jqueryui.min.js"></script>
+    <script src="js/plugins/jqueryui.min.js"></script>
     <!-- Image zoom JS -->
-    <script src="/js/plugins/image-zoom.min.js"></script>
+    <script src="js/plugins/image-zoom.min.js"></script>
     <!-- mail-chimp active js -->
-    <script src="/js/plugins/ajaxchimp.js"></script>
+    <script src="js/plugins/ajaxchimp.js"></script>
     <!-- contact form dynamic js -->
-    <script src="/js/plugins/ajax-mail.js"></script>
+    <script src="js/plugins/ajax-mail.js"></script>
     <!-- google map active js -->
-    <script src="/js/plugins/google-map.js"></script>
+    <script src="js/plugins/google-map.js"></script>
     <!-- Main JS -->
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
