--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
     <title>Bordados | Pagador</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
     <link
         href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,300i,400,400i,600,600i,700,700i%7CPoppins:300,300i,400,400i,500,500i,600,700,800,900&display=swap"
         rel="stylesheet">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Pe-icon-7-stroke CSS -->
-    <link rel="stylesheet" href="/css/vendor/pe-icon-7-stroke.css">
+    <link rel="stylesheet" href="css/vendor/pe-icon-7-stroke.css">
     <!-- Font-awesome CSS -->
-    <link rel="stylesheet" href="/css/vendor/font-awesome.min.css">
+    <link rel="stylesheet" href="css/vendor/font-awesome.min.css">
     <!-- Slick slider css -->
-    <link rel="stylesheet" href="/css/plugins/slick.min.css">
+    <link rel="stylesheet" href="css/plugins/slick.min.css">
     <!-- animate css -->
-    <link rel="stylesheet" href="/css/plugins/animate.css">
+    <link rel="stylesheet" href="css/plugins/animate.css">
     <!-- Nice Select css -->
-    <link rel="stylesheet" href="/css/plugins/nice-select.css">
+    <link rel="stylesheet" href="css/plugins/nice-select.css">
     <!-- jquery UI css -->
-    <link rel="stylesheet" href="/css/plugins/jqueryui.min.css">
+    <link rel="stylesheet" href="css/plugins/jqueryui.min.css">
     <!-- main style css -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -47,7 +47,7 @@
                         <div class="col-lg-3">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img class="rounded-circle" src="/img/logo/logo.png" alt="Brand Logo">
+                                    <img class="rounded-circle" src="img/logo/logo.png" alt="Brand Logo">
                                 </a>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                         <div class="mobile-main-header">
                             <div class="mobile-logo">
                                 <a href="index.html">
-                                    <img class="rounded-circle" src="/img/logo/logo.png" alt="Brand Logo">
+                                    <img class="rounded-circle" src="img/logo/logo.png" alt="Brand Logo">
                                 </a>
                             </div>
                             <div class="mobile-menu-toggler">
@@ -248,25 +248,25 @@
             <div class="hero-slider-active slick-arrow-style slick-arrow-style_hero slick-dot-style">
                 <!-- single slider item -->
                 <div class="hero-single-slide hero-overlay">
-                    <div class="hero-slider-item bg-img" data-bg="/img/slider/banner001.jpg"></div>
+                    <div class="hero-slider-item bg-img" data-bg="img/slider/banner001.jpg"></div>
                 </div>
                 <!-- single slider item -->
 
                 <!-- single slider item -->
                 <div class="hero-single-slide hero-overlay">
-                    <div class="hero-slider-item bg-img" data-bg="/img/slider/banner002.jpg"></div>
+                    <div class="hero-slider-item bg-img" data-bg="img/slider/banner002.jpg"></div>
                 </div>
                 <!-- single slider item -->
 
                 <!-- single slider item -->
                 <div class="hero-single-slide hero-overlay">
-                    <div class="hero-slider-item bg-img" data-bg="/img/slider/banner003.jpg"></div>
+                    <div class="hero-slider-item bg-img" data-bg="img/slider/banner003.jpg"></div>
                 </div>
                 <!-- single slider item -->
 
                 <!-- single slider item -->
                 <div class="hero-single-slide hero-overlay">
-                    <div class="hero-slider-item bg-img" data-bg="/img/slider/banner004.jpg"></div>
+                    <div class="hero-slider-item bg-img" data-bg="img/slider/banner004.jpg"></div>
                 </div>
                 <!-- single slider item -->
             </div>
@@ -305,7 +305,7 @@
                     <!-- Tienda 2 -->
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="proyecto">
-                            <img src="/img/product/moreno004.png" alt="Proyecto 2">
+                            <img src="img/product/moreno004.png" alt="Proyecto 2">
                             <div class="overlay">
                                 <p>Morenada</p>
                                 <div class="iconos-contenedor">
@@ -322,7 +322,7 @@
                     <!-- Tienda 3 -->
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="proyecto">
-                            <img src="/img/product/diablada003.png" alt="Proyecto 3">
+                            <img src="img/product/diablada003.png" alt="Proyecto 3">
                             <div class="overlay">
                                 <p>Diablada</p>
                                 <div class="iconos-contenedor">
@@ -339,7 +339,7 @@
                     <!-- Tienda 4 -->
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="proyecto">
-                            <img src="/img/product/diablada004.png" alt="Proyecto 4">
+                            <img src="img/product/diablada004.png" alt="Proyecto 4">
                             <div class="overlay">
                                 <p>Diablada</p>
                                 <div class="iconos-contenedor">
@@ -356,7 +356,7 @@
                     <!-- Tienda 5 -->
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="proyecto">
-                            <img src="/img/product/tinku001.png" alt="Proyecto 5">
+                            <img src="img/product/tinku001.png" alt="Proyecto 5">
                             <div class="overlay">
                                 <p>Tinku</p>
                                 <div class="iconos-contenedor">
@@ -373,7 +373,7 @@
                     <!-- Tienda 6 -->
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="proyecto">
-                            <img src="/img/product/caporal005.png" alt="Proyecto 6">
+                            <img src="img/product/caporal005.png" alt="Proyecto 6">
                             <div class="overlay">
                                 <p>Caporal</p>
                                 <div class="iconos-contenedor">
@@ -449,7 +449,7 @@
                             <div class="testimonial-carousel">
                                 <div class="testimonial-content">
                                     <div class="testimonial-thumb">
-                                        <img class="img-testimonios" src="/img/testimonial/desarrollador-ejemplo.svg"
+                                        <img class="img-testimonios" src="img/testimonial/desarrollador-ejemplo.svg"
                                             alt="testimonial-thumb">
                                     </div>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -460,7 +460,7 @@
                                 </div>
                                 <div class="testimonial-content">
                                     <div class="testimonial-thumb">
-                                        <img class="img-testimonios" src="/img/testimonial/desarrollador-ejemplo.svg"
+                                        <img class="img-testimonios" src="img/testimonial/desarrollador-ejemplo.svg"
                                             alt="testimonial-thumb">
                                     </div>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -471,7 +471,7 @@
                                 </div>
                                 <div class="testimonial-content">
                                     <div class="testimonial-thumb">
-                                        <img class="img-testimonios" src="/img/testimonial/desarrollador-ejemplo.svg"
+                                        <img class="img-testimonios" src="img/testimonial/desarrollador-ejemplo.svg"
                                             alt="testimonial-thumb">
                                     </div>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -564,27 +564,27 @@
     <!-- JS============================================ -->
 
     <!-- Modernizer JS -->
-    <script src="/js/vendor/modernizr-3.6.0.min.js"></script>
+    <script src="js/vendor/modernizr-3.6.0.min.js"></script>
     <!-- jQuery JS -->
-    <script src="/js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="js/vendor/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
-    <script src="/js/vendor/bootstrap.bundle.min.js"></script>
+    <script src="js/vendor/bootstrap.bundle.min.js"></script>
     <!-- slick Slider JS -->
-    <script src="/js/plugins/slick.min.js"></script>
+    <script src="js/plugins/slick.min.js"></script>
     <!-- Nice Select JS -->
-    <script src="/js/plugins/nice-select.min.js"></script>
+    <script src="js/plugins/nice-select.min.js"></script>
     <!-- jquery UI JS -->
-    <script src="/js/plugins/jqueryui.min.js"></script>
+    <script src="js/plugins/jqueryui.min.js"></script>
     <!-- Image zoom JS -->
-    <script src="/js/plugins/image-zoom.min.js"></script>
+    <script src="js/plugins/image-zoom.min.js"></script>
     <!-- mail-chimp active js -->
-    <script src="/js/plugins/ajaxchimp.js"></script>
+    <script src="js/plugins/ajaxchimp.js"></script>
     <!-- contact form dynamic js -->
-    <script src="/js/plugins/ajax-mail.js"></script>
+    <script src="js/plugins/ajax-mail.js"></script>
     <!-- google map active js -->
-    <script src="/js/plugins/google-map.js"></script>
+    <script src="js/plugins/google-map.js"></script>
     <!-- Main JS -->
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
